// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returns inferred schema column information > usersColumns 1`] = `
[
  {
    "dataType": "string",
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isSerial": false,
    "name": "id",
    "tableName": "Users",
    "tableType": "table",
  },
  {
    "dataType": "string",
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isSerial": false,
    "name": "sort",
    "tableName": "Users",
    "tableType": "table",
  },
  {
    "dataType": "string",
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isSerial": false,
    "name": "email",
    "tableName": "Users",
    "tableType": "table",
  },
  {
    "dataType": "object",
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isSerial": false,
    "name": "profile",
    "tableName": "Users",
    "tableType": "table",
  },
  {
    "dataType": "array",
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isSerial": false,
    "name": "tags",
    "tableName": "Users",
    "tableType": "table",
  },
]
`;

exports[`returns table models > usersTable 1`] = `
{
  "columns": [
    {
      "dataType": "string",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isReadOptional": false,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": false,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "id",
      "schemaName": undefined,
      "tableName": "Users",
      "tableType": "table",
      "type": "string",
    },
    {
      "dataType": "string",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isReadOptional": false,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": false,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "sort",
      "schemaName": undefined,
      "tableName": "Users",
      "tableType": "table",
      "type": "string",
    },
    {
      "dataType": "string",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isReadOptional": false,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": false,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "email",
      "schemaName": undefined,
      "tableName": "Users",
      "tableType": "table",
      "type": "string",
    },
    {
      "dataType": "object",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isReadOptional": false,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": false,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "profile",
      "schemaName": undefined,
      "tableName": "Users",
      "tableType": "table",
      "type": "object",
    },
    {
      "dataType": "array",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isReadOptional": false,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": false,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "tags",
      "schemaName": undefined,
      "tableName": "Users",
      "tableType": "table",
      "type": "any",
    },
  ],
  "name": "Users",
  "schemaName": undefined,
  "type": "table",
}
`;
